# re-indicators-calculation-service

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  README.md  demo.sh
.forgejo/workflows/: ci.yml  release.yml
.github/workflows/: create-release.yml
compose/: .env.example  README.md  docker-compose.yml
compose/registry/: catalog.json
docs/: SUMMARY.md  api-overview.md  api-reference.md  architecture.md  book.toml  deployment.md  index.md  integration.md  local-testing.md  scope.md
payloads/: recycle_battery_compute_request.json
scripts/: sync-local-artifacts.sh  validate-local-compose.sh
src/: artifacts.rs  calculation_artifact_client.rs  computation.rs  config.rs  fetcher.rs  hex_core_api_client.rs  lib.rs  main.rs  service_types.rs  spec_loader.rs  validator.rs
tests/fixtures/: calculation-recycle-battery-0.0.4.json  payload-recycle-battery-0.0.4.json
