[package]
name = "re-indicators-calculation-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
